syntax = "proto3";

package com.rafsan.disease;

option java_package="com.rafsan.disease";
option java_multiple_files = true;

service DiseaseService {
    rpc getDiseasesForVirus(DiseaseRequest) returns (DiseaseResponse);
}

message DiseaseRequest {
    int32 virus_id = 1;
}

message DiseaseResponse {
    repeated Disease disease = 1;
}

message Disease {
    int32 id = 1;
    int32 virus_id = 2;
    string name = 3;
    string fatality = 4;
}